--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:0.3'
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
-    //SOAP
-    implementation 'com.google.code.ksoap2-android:ksoap2-android:3.6.4'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.1'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
